<resources>
    <string name="app_name">shouyinji</string>
    <string name="xianjin">现金</string>
    <string name="saoma">扫码</string>
    <string name="erweima">二维码</string>
    <string name="yingshuo">应收金额</string>
    <string name="shishuo">实收</string>
    <string name="zhaolin">找零</string>
    <string name="jiesuan">结算</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">登录</string>
    <string name="bluetooth">蓝牙</string>
</resources>
